# nameless_engine

./: CMakeLists.txt  README.md  app.cpp  app.h  c_math.h  context_gl.cpp  context_gl.h  defines.h  engine.cpp  engine.h  error_list.c  error_list.h  input_x11.cpp  input_x11.h  keys.h  logger.h  main.cpp  mesh.h  renderer_x11.cpp  renderer_x11.h  test_app.cpp  test_app.h  triangle.cpp  triangle.h  window_x11.cpp  window_x11.h
include/: CMakeLists.txt
include/core/: CMakeLists.txt  error_list.h
include/engine/: CMakeLists.txt  joj_engine.h  joj_window.h  keys.h
include/graphics/: CMakeLists.txt  context.h
include/graphics/opengl/: CMakeLists.txt  context_gl.h
main/: CMakeLists.txt  main.cpp
platform/: CMakeLists.txt
platform/windows/: CMakeLists.txt
platform/x11/: CMakeLists.txt
platform/x11/include/: CMakeLists.txt  input_x11.h  window_x11.h
platform/x11/src/: CMakeLists.txt  input_x11.cpp  window_x11.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  error_list.c
src/engine/: CMakeLists.txt  engine.cpp  joj_window.cpp
src/graphics/: CMakeLists.txt  context.cpp
src/graphics/opengl/: CMakeLists.txt  context_gl.cpp
